# selekt

./: .editorconfig  404.html  CHANGELOG.md  build.gradle.kts  gradle.properties  index.html  mkdocs.yml  settings.gradle.kts  sitemap.xml  test_selekt.sh
.github/workflows/: continuous-integration.yml  publication.yml  publish-documentation.yml  scorecard.yml
AndroidCLI/: build.gradle.kts
AndroidLib/: build.gradle.kts
AndroidLibBenchmark/: build.gradle.kts
OpenSSL/: build.gradle.kts
SQLite3/: CMakeLists.txt  build.gradle.kts  sqlite3_jni.cpp
SQLite3/sqlite3/: CMakeLists.txt
config/detekt/: config.yml
getting_started/: index.html
gradle/: libs.versions.toml
kdoc/-android-lib/: index.html
kdoc/-android-lib/com.bloomberg.selekt.android.support/: index.html
kdoc/-android-support-lib/: index.html
kdoc/-api-lib/: index.html
native_libraries/: index.html
results/: metaInformation.json  qodana.sarif.json
results/descriptions/: Code_Inspection.json
search/: search_index.json
selekt-android/: build.gradle.kts
selekt-android-lint/: build.gradle.kts
selekt-android-sqlcipher/: build.gradle.kts
selekt-api/: build.gradle.kts
selekt-bom/: build.gradle.kts
selekt-commons/: build.gradle.kts
selekt-detekt-rules/: build.gradle.kts
selekt-java/: build.gradle.kts
selekt-jdbc/: build.gradle.kts
selekt-jvm/: build.gradle.kts
selekt-sqlite3-api/: build.gradle.kts
selekt-sqlite3-classes/: build.gradle.kts
selekt-sqlite3-ext/: README.md  build.gradle.kts
selekt-sqlite3-sqlcipher/: build.gradle.kts
(+356 files in other folders)
